完成了商品功能开发

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -23,3 +23,16 @@ html,body,#app {
 .el-pagination {
   margin-top: 15px;
 }
+/* 步骤条 */
+.el-steps {
+  margin: 15px 0;
+}
+/* 步骤条标题 */
+.el-step__title {
+  font-size: 13px;
+}
+
+/* 富文本编辑器 */
+.ql-editor {
+  min-height: 300px;
+}
